--- a/.github/workflows/show_hn.yml
+++ b/.github/workflows/show_hn.yml
@@ -2,40 +2,41 @@ name: Update index.html
 
 on:
   push:
-    branches:
-      - main  # Change this to your main branch name
+  workflow_dispatch:
+  schedule:
+    - cron: '0 13 * * *' # runs at 9am EST
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3  # Use v3 of actions/checkout
+      - name: Checkout code
+        uses: actions/checkout@v3 # Use v3 of actions/checkout
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.11  # Choose your Python version
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11 # Choose your Python version
 
-    - name: Install Poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
-      shell: bash
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+        shell: bash
 
-    - name: Install dependencies
-      run: poetry install
+      - name: Install dependencies
+        run: poetry install
 
-    - name: Run Python script
-      run: |
-        poetry run python main.py
-      working-directory: ${{ github.workspace }}
-      
-    - name: Commit and push if it changed
-      run: |-
-        git config user.name "Automated"
-        git config user.email "actions@users.noreply.github.com"
-        git add -A
-        timestamp=$(date -u)
-        git commit -m "Latest data: ${timestamp}" || exit 0
-        git push
+      - name: Run Python script
+        run: |
+          poetry run python main.py
+        working-directory: ${{ github.workspace }}
+
+      - name: Commit and push if it changed
+        run: |-
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add -A
+          timestamp=$(date -u)
+          git commit -m "Latest data: ${timestamp}" || exit 0
+          git push
