--- a/.github/workflows/show_hn.yml
+++ b/.github/workflows/show_hn.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry lock
-          poetry install
+          poetry install --no-root
 
       - name: Run Python script
         run: |
